# python-intermediate-inflammation

./: inflammation-analysis.py  pyproject.toml
.github/workflows/: main.yml
inflammation/: compute_data.py  models.py  views.py
tests/: test_compute_data.py  test_models.py  test_patient.py
