[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-intermediate-inflammation"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pylint>=3.3.9",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
]

[tool.setuptools]
packages = ["inflammation"]
